--- a/superhero/superhero/View/HeroTableViewCell.xib
+++ b/superhero/superhero/View/HeroTableViewCell.xib
@@ -10,43 +10,51 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeroTableViewCell" rowHeight="76" id="KGk-i7-Jjw" customClass="HeroTableViewCell" customModule="superhero" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeroTableViewCell" rowHeight="93" id="KGk-i7-Jjw" customClass="HeroTableViewCell" customModule="superhero" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="93"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="93"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ojk-ZI-Ufu">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YgV-Yh-Jwy">
-                                <rect key="frame" x="10" y="10" width="50" height="50"/>
+                                <rect key="frame" x="10" y="10" width="70" height="70"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WRj-px-saU">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="F6H-YQ-qCB">
+                                        <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                        <color key="color" systemColor="systemRedColor"/>
+                                    </activityIndicatorView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WRj-px-saU" customClass="CustomImageView" customModule="superhero" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="H1c-Ws-soF"/>
+                                    <constraint firstItem="F6H-YQ-qCB" firstAttribute="leading" secondItem="YgV-Yh-Jwy" secondAttribute="leading" id="ATa-Yh-m9F"/>
+                                    <constraint firstAttribute="width" constant="70" id="H1c-Ws-soF"/>
                                     <constraint firstAttribute="trailing" secondItem="WRj-px-saU" secondAttribute="trailing" id="PcI-3M-JMB"/>
-                                    <constraint firstAttribute="height" constant="50" id="S7y-zU-pqg"/>
+                                    <constraint firstAttribute="height" constant="70" id="S7y-zU-pqg"/>
                                     <constraint firstItem="WRj-px-saU" firstAttribute="leading" secondItem="YgV-Yh-Jwy" secondAttribute="leading" id="V5F-5x-qBI"/>
+                                    <constraint firstAttribute="trailing" secondItem="F6H-YQ-qCB" secondAttribute="trailing" id="cPy-pA-gIC"/>
+                                    <constraint firstItem="F6H-YQ-qCB" firstAttribute="top" secondItem="YgV-Yh-Jwy" secondAttribute="top" id="d6i-pe-1aq"/>
                                     <constraint firstItem="WRj-px-saU" firstAttribute="top" secondItem="YgV-Yh-Jwy" secondAttribute="top" id="uMu-xo-p5u"/>
+                                    <constraint firstAttribute="bottom" secondItem="F6H-YQ-qCB" secondAttribute="bottom" id="vZQ-6j-cLg"/>
                                     <constraint firstAttribute="bottom" secondItem="WRj-px-saU" secondAttribute="bottom" id="xRa-Ep-lEV"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BNF-Nc-eNH">
-                                <rect key="frame" x="70" y="10" width="240" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="90" y="10" width="220" height="25.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="70" id="4K9-zL-OC7"/>
+                            <constraint firstAttribute="height" constant="90" id="4K9-zL-OC7"/>
                             <constraint firstItem="BNF-Nc-eNH" firstAttribute="leading" secondItem="YgV-Yh-Jwy" secondAttribute="trailing" constant="10" id="51E-XA-3Ba"/>
                             <constraint firstAttribute="trailing" secondItem="BNF-Nc-eNH" secondAttribute="trailing" constant="10" id="Az6-p8-69D"/>
                             <constraint firstItem="BNF-Nc-eNH" firstAttribute="top" secondItem="Ojk-ZI-Ufu" secondAttribute="top" constant="10" id="gIU-pm-Dfg"/>
@@ -65,17 +73,21 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="activityIndicator" destination="F6H-YQ-qCB" id="QLx-pP-3b2"/>
                 <outlet property="heroImageView" destination="WRj-px-saU" id="bpf-Vk-HUV"/>
                 <outlet property="imageContainerView" destination="YgV-Yh-Jwy" id="Ueq-JZ-SpY"/>
                 <outlet property="mainbgView" destination="Ojk-ZI-Ufu" id="1H6-xW-XJt"/>
                 <outlet property="nameLabel" destination="BNF-Nc-eNH" id="pXm-S8-hWD"/>
             </connections>
-            <point key="canvasLocation" x="131.8840579710145" y="94.419642857142847"/>
+            <point key="canvasLocation" x="131.8840579710145" y="100.11160714285714"/>
         </tableViewCell>
     </objects>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
