--- a/superhero/superhero/Base.lproj/Main.storyboard
+++ b/superhero/superhero/Base.lproj/Main.storyboard
@@ -22,9 +22,21 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="abm-0E-m76">
                                         <rect key="frame" x="10" y="50" width="394" height="54"/>
                                         <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="45"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Xf1-Fy-Bwx">
+                                        <rect key="frame" x="0.0" y="158" width="414" height="738"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="yTJ-KP-cxd"/>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="g1g-4e-nCK"/>
+                                        </connections>
+                                    </tableView>
+                                    <view alpha="0.90000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zat-0K-9nY">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="8Ff-al-HO5">
                                         <rect key="frame" x="10" y="114" width="394" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
@@ -33,16 +45,8 @@
                                             <action selector="searchName:" destination="BYZ-38-t0r" eventType="editingChanged" id="72F-d9-Qh4"/>
                                         </connections>
                                     </textField>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Xf1-Fy-Bwx">
-                                        <rect key="frame" x="10" y="158" width="394" height="738"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <connections>
-                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="yTJ-KP-cxd"/>
-                                            <outlet property="delegate" destination="BYZ-38-t0r" id="g1g-4e-nCK"/>
-                                        </connections>
-                                    </tableView>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dgJ-SI-dCF">
-                                        <rect key="frame" x="10" y="148" width="394" height="200"/>
+                                        <rect key="frame" x="10" y="146" width="394" height="200"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="200" id="Jn2-Gx-qr9"/>
@@ -53,21 +57,25 @@
                                         </connections>
                                     </tableView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="abm-0E-m76" secondAttribute="trailing" constant="10" id="15h-eU-wyU"/>
-                                    <constraint firstItem="Xf1-Fy-Bwx" firstAttribute="leading" secondItem="aob-10-nLL" secondAttribute="leading" constant="10" id="2mf-6C-1HB"/>
-                                    <constraint firstItem="dgJ-SI-dCF" firstAttribute="top" secondItem="8Ff-al-HO5" secondAttribute="bottom" id="3fq-R6-sLF"/>
+                                    <constraint firstItem="Xf1-Fy-Bwx" firstAttribute="leading" secondItem="aob-10-nLL" secondAttribute="leading" id="2mf-6C-1HB"/>
+                                    <constraint firstItem="dgJ-SI-dCF" firstAttribute="top" secondItem="8Ff-al-HO5" secondAttribute="bottom" constant="-2" id="3fq-R6-sLF"/>
+                                    <constraint firstAttribute="top" secondItem="Zat-0K-9nY" secondAttribute="top" id="Cyr-s7-nGy"/>
                                     <constraint firstItem="abm-0E-m76" firstAttribute="top" secondItem="aob-10-nLL" secondAttribute="top" constant="50" id="GbI-Go-U4z"/>
                                     <constraint firstItem="abm-0E-m76" firstAttribute="leading" secondItem="aob-10-nLL" secondAttribute="leading" constant="10" id="KXt-Oe-IyX"/>
                                     <constraint firstItem="8Ff-al-HO5" firstAttribute="top" secondItem="abm-0E-m76" secondAttribute="bottom" constant="10" id="LU3-PB-N9r"/>
                                     <constraint firstItem="Xf1-Fy-Bwx" firstAttribute="top" secondItem="8Ff-al-HO5" secondAttribute="bottom" constant="10" id="P1C-Vs-wt6"/>
-                                    <constraint firstAttribute="trailing" secondItem="Xf1-Fy-Bwx" secondAttribute="trailing" constant="10" id="PtV-pH-72u"/>
+                                    <constraint firstAttribute="trailing" secondItem="Xf1-Fy-Bwx" secondAttribute="trailing" id="PtV-pH-72u"/>
                                     <constraint firstAttribute="trailing" secondItem="dgJ-SI-dCF" secondAttribute="trailing" constant="10" id="YKV-5b-I0Q"/>
+                                    <constraint firstItem="Zat-0K-9nY" firstAttribute="leading" secondItem="aob-10-nLL" secondAttribute="leading" id="YaG-6l-hgU"/>
                                     <constraint firstAttribute="bottom" secondItem="Xf1-Fy-Bwx" secondAttribute="bottom" id="ZP0-1T-m7n"/>
+                                    <constraint firstAttribute="trailing" secondItem="Zat-0K-9nY" secondAttribute="trailing" id="gaZ-tf-rbM"/>
                                     <constraint firstItem="dgJ-SI-dCF" firstAttribute="leading" secondItem="aob-10-nLL" secondAttribute="leading" constant="10" id="krf-DZ-TxP"/>
                                     <constraint firstAttribute="trailing" secondItem="8Ff-al-HO5" secondAttribute="trailing" constant="10" id="qya-HR-S93"/>
                                     <constraint firstItem="8Ff-al-HO5" firstAttribute="leading" secondItem="aob-10-nLL" secondAttribute="leading" constant="10" id="w35-vr-e5u"/>
+                                    <constraint firstAttribute="bottom" secondItem="Zat-0K-9nY" secondAttribute="bottom" id="yrz-Gj-tXC"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -82,6 +90,7 @@
                     </view>
                     <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="0pq-ck-fKm"/>
                     <connections>
+                        <outlet property="blackBgView" destination="Zat-0K-9nY" id="3Qy-FH-lSz"/>
                         <outlet property="heroTableView" destination="Xf1-Fy-Bwx" id="Rzl-Nb-yTb"/>
                         <outlet property="mainBgView" destination="aob-10-nLL" id="Jc8-yZ-BcD"/>
                         <outlet property="navigationTitleLabel" destination="abm-0E-m76" id="H0h-HF-mDz"/>
@@ -115,6 +124,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
